# swift

./: CMakeLists.txt  README.md  main.cpp
algo/hashmaps/: GPHashmap.hpp  Hashmap.hpp  STDHashmap.hpp  SetHashmap.hpp  VecHashmap.hpp
algo/segments_tree/: SegmentTree.hpp  SegmentTreeIter.hpp  SegmentTreePointer.hpp
algo/sets/: GNUSet.hpp  STDSet.hpp  Set.hpp
algo/tester/: MapTesterManager.hpp  SegmentTreeTesterManager.hpp  TestResults.hpp  Tester.hpp  TesterManager.hpp
utils/: Settings.hpp  math.hpp  timer.hpp
